# GLTG

./: .env.example  .gitignore  Dockerfile  GLTG_AUDIT_2026-06-27.md  MIGRATION_TEST_REPORT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: GLTG_ASSESSMENT_PACKET_SCHEMA.md  GLTG_EVALUATOR_PROVIDER_INTERFACE.md  GLTG_FALLBACK_AND_GUARDRAILS.md  GLTG_PROMPT_PROTOCOL.md  GLTG_PROVIDER_AGNOSTIC_LLM_ASSISTED_TRADE_RISK_EVALUATOR.md  GLTG_TRADE_PROCESSING_TIME_FACTOR_MODEL_PRD.md  defect-01-schema-mapping.md  gltg_v2_behavioral_contract.md  migration_audit.md
scripts/: run_api_edge_cases.py  run_reforecast_demo.py
src/gltg/: __init__.py  engine.py
src/gltg/api/: __init__.py  main.py  routes.py  schemas.py
src/gltg/apparel/: baselines.py  order_mapper.py
src/gltg/behavioral/: __init__.py  schemas.py  simulator.py
src/gltg/enumeration/: option_ranker.py  path_enumerator.py
tests/: test_giraffe_db_id_contract.py
tests/api/: test_api_endpoints.py  test_percentiles_and_baselines.py  test_v2_behavioral_simulation.py  test_v2_evaluator.py
tests/evaluator/: conftest.py  test_mock_provider.py  test_no_hardcoded_primary.py  test_openai_compatible_adapter.py  test_prompt_contract.py  test_provider_registry.py  test_validator_guardrails.py
tests/fixtures/: gltg_v2_simulation_request.json  gltg_v2_simulation_response.json
tests/integration/: test_engine_http_parity.py  test_reforecast.py
tests/unit/: test_aivan_client.py  test_capacity_sewing.py  test_enumerate_options.py  test_factory_differentiation.py
(+35 files in other folders)
