[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gltg"
version = "1.0.0"
description = "Giraffe Lead-Time Graph -- evidence-weighted execution-time graph model for apparel and textile orders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]
cli = []

[project.scripts]
gltg = "gltg.integrations.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gltg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]
